# manner

./: .gitignore  README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/2021-02-10-094251_create_users/: up.sql
backend/src/: auth.rs  main.rs  schema.rs
backend/src/handlers/: users.rs
backend/src/models/: user.rs
frontend/: Dockerfile  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
nginx/: nginx.conf
