[package]
name = "api"
version = "0.1.0"
authors = ["Keisuke Toyota <hm.pudding0715@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.0"
actix-cors = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
diesel = { version = "1.4", features = ["mysql", "chrono", "r2d2"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
r2d2 = "0.8"